--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
 	<title>Module</title>
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-	<h1>My Module</h1>
-	<span class="button-popup">
-		<a href="#" id="button-popup">TOUCH ME</a>
-	</span>
-	<div class="window-popup">
-		<div class="wp-content">
-			<h2>content goes here</h2>
-			<a href="#" id="cutton-popup-close">CLOSE</a>
-		</div>
+
+	<div id="mod_back"></div>
+	<div id="mod_box">
+		<span id="close">&times;</span>
+		<h2>I am a modal. Sent to annoy you. I know, I'm truly annoying when you're trying to read AND... I keep "popping up"</h2>
 	</div>
+
+	<div id="container">
+			<div id="main">
+		<a href="#" id="open">Open Modal</a>
+		<h1>This is my jQuery modal.</h1>
+	</div>	
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="scripts/script.js"></script>
 </body>
 </html>
