Changed bg, css. Completed

--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
 	<meta charset="UTF-8">
 	<title>Module</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Stalemate' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 	<div id="mod_back"></div>
 	<div id="mod_box">
 		<span id="close">&times;</span>
-		<h2>I am a modal. Sent to annoy you. I know, I'm truly annoying when you're trying to read AND... I keep "popping up"</h2>
+		<h2>I am a modal.<br>Sent to annoy you. I know, I know.. you're trying to read and I'm quite bothersome to say the least. But, I am pretty effective at redirecting. Cheers :)</h2>
 	</div>
 
 	<div id="container">
 			<div id="main">
 		<a href="#" id="open">Open Modal</a>
-		<h1>This is my jQuery modal.</h1>
+		<div class="rotate_type">
+		</div>
 	</div>	
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
